--- a/src/components/FoodType/FoodType.module.css
+++ b/src/components/FoodType/FoodType.module.css
@@ -21,3 +21,43 @@ li {
   font-size: 1.2em;
   margin: 0px;
 }
+
+.buttonPanel {
+  display: flex;
+  padding: 10px;
+  align-items: stretch;
+}
+
+.plusButton {
+  background-color: #4caf50;
+  /* border: none; */
+  color: white;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: flex;
+  font-size: 16px;
+}
+
+.minusButton {
+  background-color: red;
+  /* border: none; */
+  color: white;
+  padding: 5px 13px;
+  text-align: center;
+  text-decoration: none;
+  display: flex;
+  font-size: 16px;
+}
+
+.count {
+  text-align: right;
+  font-size: 1.4em;
+}
+
+.countBox {
+  padding-left: 50px;
+  padding-right: 10px;
+  background-color: gainsboro;
+  border: 1px solid black;
+}
