--- a/src/components/FoodType/FoodType.module.css
+++ b/src/components/FoodType/FoodType.module.css
@@ -61,3 +61,13 @@ li {
   background-color: gainsboro;
   border: 1px solid black;
 }
+
+.deleteButton {
+  border: 2px solid black;
+  border-radius: 5px;
+  background-color: rgb(255, 118, 118);
+  margin-left: 10px;
+  padding: 5px;
+  font-size: small;
+  font-style: italic;
+}
