--- a/src/components/FoodType/FoodType.module.css
+++ b/src/components/FoodType/FoodType.module.css
@@ -1,4 +1,4 @@
-.div {
+.foodType {
   display: flex;
   flex-direction: column;
   border: 1px solid black;
@@ -6,18 +6,4 @@
   padding: 1px;
   margin: 5px;
   background-color: azure;
-}
-
-.ul {
-  padding: 5px;
-  margin: 0px;
-}
-
-li {
-  list-style-type: none;
-}
-
-.h1 {
-  font-size: 1.2em;
-  margin: 0px;
 }
