--- a/src/components/FoodType/FoodType.module.css
+++ b/src/components/FoodType/FoodType.module.css
@@ -7,3 +7,14 @@
   margin: 5px;
   background-color: azure;
 }
+
+.foodTypeSelected {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid black;
+  border-radius: 3px;
+  padding: 1px;
+  margin: 5px;
+  background-color: rgba(1, 11, 30, 0.653);
+  color:hsl(0, 0%, 100%);  
+}
