--- a/src/components/Buttons/DeleteButton/DeleteButton.module.css
+++ b/src/components/Buttons/DeleteButton/DeleteButton.module.css
@@ -3,7 +3,30 @@
   border-radius: 5px;
   background-color: rgb(255, 118, 118);
   margin-left: 10px;
-  padding: 5px;
-  font-size: small;
-  font-style: italic;
+  padding: 2px;
+  box-shadow: 1px -1px 1px 1px gray;   
 }
+
+.deleteButton:hover {
+  border: 2px solid black;
+  border-radius: 5px;
+  background-color: rgb(255, 118, 118);
+  margin-left: 10px;
+  padding: 2px;  
+  box-shadow: 1px -1px 1px 1px yellow;    
+}
+
+.deleteButton:active {
+  border: 2px solid black;
+  border-radius: 5px;
+  background-color: rgb(255, 118, 118);
+  margin-left: 10px;
+  padding: 0px;   
+}
+
+.deleteImg {
+  height: 25px;    
+}
+
+
+
