🎨🔨Some css stylings and small fixes

--- a/src/components/SidebarRow/SidebarRow.module.css
+++ b/src/components/SidebarRow/SidebarRow.module.css
@@ -7,8 +7,11 @@
 
 .SidebarRowIcon {
   flex: 30%;
+  text-align: center;
 }
 
 .SidebarRowTitle {
   flex: 70%;
+  text-align: left;
+  font-size: large;
 }
