--- a/src/components/FoodTypePanel/FoodTypePanel.module.css
+++ b/src/components/FoodTypePanel/FoodTypePanel.module.css
@@ -1,5 +1,4 @@
   .foodTypePanel {
-    border: solid 2px rgb(2, 153, 108);
-    border-radius: 3px;
-    margin: 10px;
+    /* border: solid 2px rgb(2, 153, 108);
+    border-radius: 3px;          */
   }
