--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,3 +1,11 @@
 .header {
   text-align: center;
+  position: fixed;
+  top: 0;
+  left: 15vw;
+  right: 0; 
+  background-color: rgb(179, 218, 255);
+  z-index: 999;
+  font-size: small;
+  height: 8vh;
 }
