--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,5 +1,17 @@
 .Sidebar {
-  height: auto;
-  width: 50%;
+  height: 100%;
+  width: 15vw;
   background-color: #deffda;
+  margin: 0;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  position: fixed;  
+}
+
+ul {
+  padding: 5px;
+  margin: 0px;  
+}
+
+.SidebarTitle {
+  text-align: center;
 }
